@@ -1,3 +1,14 @@
+Tue Jan 16 23:20:38 2001  Owen Taylor  <otaylor@redhat.com>
+
+	* gutils.c glibintl.h: Optimize for size rather than speed by
+	making _() always call _glib_gettext() instead of conditionally
+	calling gettext() or _glib_gettext_init. glib only uses translated
+	strings in slow error handling code anyways.
+
+	* glibintl.h: g'ify types.
+
+	* Makefile.am: include glibintl.h in _SOURCES
+
 2001-01-17  Tor Lillqvist  <tml@iki.fi>
 
 	* config.h.win32.in: Define ENABLE_NLS and GETTEXT_PACKAGE.
